crates/batuta-tui/tests/snapshots/detail_session__session_cancel_confirm_100x30.snap
---
source: crates/batuta-tui/tests/detail_session.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions · batuta─────────────────┐┌[4] Session · sess-a · batuta─────────────────────────────┐"
"│no sessions — press n to start one    ││no transcript yet                                         │"
"└──────────────────────────────────────┘│                                                          │"
"┌[2] Deliver runs · batuta-deliver─────┐│                                                          │"
"│no runs for batuta-deliver — press * f││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"┌[3] Attention (0)─────────────────────┐│                                                          │"
"│nothing needs attention               ││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │cancel the current turn? Enter/Esc                        │"
"                                        │live                                                      │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                       i edit · Enter send│"
"                                        └──────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  j/k/PgUp/PgDn"
