crates/batuta-tui/tests/snapshots/detail_session__session_detail_transcript_100x30.snap
---
source: crates/batuta-tui/tests/detail_session.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions · all sessions───────────┐┌[4] Session · sess-a · batuta─────────────────────────────┐"
"│no sessions — press n to start one    ││beginning of transcript                                   │"
"└──────────────────────────────────────┘│▸ batuta                                                  │"
"┌[2] Deliver runs · batuta-deliver─────┐│  event: hook.dispatch.start                              │"
"│no runs for batuta-deliver — press * f││                                                          │"
"└──────────────────────────────────────┘│▸ batuta                                                  │"
"┌[3] Attention (0)─────────────────────┐│  event: hook.dispatch.complete                           │"
"│nothing needs attention               ││                                                          │"
"└──────────────────────────────────────┘│▸ user                                                    │"
"                                        │  [redacted]                                              │"
"                                        │                                                          │"
"                                        │▸ batuta                                                  │"
"                                        │  event: system                                           │"
"                                        │  ▸ reasoning (1 lines)                                   │"
"                                        │  [redacted]                                              │"
"                                        │  event: usage                                            │"
"                                        │  ▸ reasoning (1 lines)                                   │"
"                                        │  ✓ completed redacted                                    │"
"                                        │  event: tool_call                                        │"
"                                        │  ✓ completed redacted                                    │"
"                                        │  event: tool_call                                        │"
"                                        │  ✓ completed redacted                                    │"
"                                        │live                                                      │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                       i edit · Enter send│"
"                                        └──────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  j/k/PgUp/PgDn"
