crates/batuta-tui/tests/snapshots/detail_session__session_file_mutation_warning_100x30.snap
---
source: crates/batuta-tui/tests/detail_session.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions · all sessions───────────┐┌[4] Session · sess-a · batuta─────────────────────────────┐"
"│no sessions — press n to start one    ││beginning of transcript                                   │"
"└──────────────────────────────────────┘│▸ batuta                                                  │"
"┌[2] Deliver runs · batuta-deliver─────┐│  ! file_mutation_unverified · could not verify write     │"
"│no runs for batuta-deliver — press * f││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"┌[3] Attention (0)─────────────────────┐│                                                          │"
"│nothing needs attention               ││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │live                                                      │"
"                                        │                                                          │"
"                                        │                                                          │"
"                                        │                                       i edit · Enter send│"
"                                        └──────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  j/k/PgUp/PgDn"
